Added more functionality to 202 http code
Falta acabar el chequeo de flags en /communities
